[gd_scene load_steps=3 format=3 uid="uid://ds2vq016pfb11"]

[ext_resource type="Script" path="res://perimiter/perimiter.gd" id="1_t737w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xu2au"]
radius = 1400.0

[node name="Perimiter" type="Node2D" groups=["Perimiter"]]
script = ExtResource("1_t737w")
radius = 1400
width = 10.0

[node name="PerimiterArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PerimiterArea"]
shape = SubResource("CircleShape2D_xu2au")

[node name="PlayerCollider" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerCollider"]
build_mode = 1
polygon = PackedVector2Array(-2.57167e-13, -1400, -273.126, -1373.1, -535.757, -1293.43, -777.798, -1164.06, -989.949, -989.949, -1164.06, -777.798, -1293.43, -535.757, -1373.1, -273.126, -1400, 1.71445e-13, -1373.1, 273.126, -1293.43, 535.757, -1164.06, 777.798, -989.949, 989.949, -777.798, 1164.06, -535.757, 1293.43, -273.126, 1373.1, 8.57224e-14, 1400, 273.126, 1373.1, 535.757, 1293.43, 777.798, 1164.06, 989.949, 989.949, 1164.06, 777.798, 1293.43, 535.757, 1373.1, 273.126, 1400, 0, 1373.1, -273.126, 1293.43, -535.757, 1164.06, -777.798, 989.949, -989.949, 777.798, -1164.06, 535.757, -1293.43, 273.126, -1373.1, 8.57224e-14, -1400, 0.0001, -1400)

[node name="Border" type="Line2D" parent="."]
points = PackedVector2Array(-2.57167e-13, -1400, -273.126, -1373.1, -535.757, -1293.43, -777.798, -1164.06, -989.949, -989.949, -1164.06, -777.798, -1293.43, -535.757, -1373.1, -273.126, -1400, 1.71445e-13, -1373.1, 273.126, -1293.43, 535.757, -1164.06, 777.798, -989.949, 989.949, -777.798, 1164.06, -535.757, 1293.43, -273.126, 1373.1, 8.57224e-14, 1400, 273.126, 1373.1, 535.757, 1293.43, 777.798, 1164.06, 989.949, 989.949, 1164.06, 777.798, 1293.43, 535.757, 1373.1, 273.126, 1400, 0, 1373.1, -273.126, 1293.43, -535.757, 1164.06, -777.798, 989.949, -989.949, 777.798, -1164.06, 535.757, -1293.43, 273.126, -1373.1, 8.57224e-14, -1400, 0.0001, -1400)

[connection signal="area_exited" from="PerimiterArea" to="." method="_on_perimiter_area_area_exited"]
